[package]
name = "wiki"
version = "0.1.0"
description = "Generates static HTML files based on markdown files."
authors = ["The Rust Leipzig user group"]
license = "MIT"
readme = "README.md"
keywords = ["wiki", "parsing", "markdown"]
repository = "https://github.com/rust-leipzig/wiki"
homepage = "https://github.com/rust-leipzig/wiki"
documentation = "https://docs.rs/wiki"
categories = ["command-line-utilities", "parsing"]

[lib]
name = "wikilib"

[dependencies]
error-chain = "0"
glob = "0"
markdown = "0"
clap = { version = "2", features = ["yaml"] }
sha-1 = "0"
log = "0"
mowl = "1"
iron = "0"
