[package]
name = "wiki"
version = "0.1.0"
description = "Generates static HTML files based on markdown files."
authors = ["The Rust Leipzig user group"]
license = "MIT"
readme = "README.md"
keywords = ["wiki", "parsing", "markdown"]
repository = "https://github.com/rust-leipzig/wiki"
homepage = "https://github.com/rust-leipzig/wiki"
documentation = "https://docs.rs/wiki"
categories = ["command-line-utilities", "parsing"]

[lib]
name = "wikilib"

[dependencies]
clap = { version = "2", features = ["yaml"] }
clippy = {version = "*", optional = true}
error-chain = "0"
glob = "0"
iron = "0"
log = "0"
markdown = "0"
mowl = "1"
rayon = "0"
uuid = { version = "0.5", features = ["v5"] }
